--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -54,6 +54,9 @@
 		<script src="js/libs-tabler/jsvectormap/dist/maps/world-merc.js?1692870487" defer></script>
         <script src="js/utils.js" defer></script>
 
+		<!-- tabler library for making a select box -->
+		<script src="js/libs-tabler/select2/dist/js/select2.full.min.js?1692870487" defer></script>
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
 		<!-- litepicker library for making a datepicker -->
