--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -55,7 +55,7 @@
         <script src="js/utils.js" defer></script>
 
 		<!-- tabler library for making a select box -->
-		<script src="js/libs-tabler/select2/dist/js/select2.full.min.js?1692870487" defer></script>
+		<script src="js/slickgrid/lib/select2.js?1692870487" defer></script>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
