--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,16 +3,14 @@
 	<footer class="navbar navbar-expand-md d-none d-lg-flex d-print-none sticky-bottom">
 		<div class="container-xl">
 			<div class="navbar-nav align-items-center flex-row order-md-last">
-						<span><a href="https://www.rnadatasystem.com" class="link-dark" target="_blank" rel="noopener" style="text-decoration: none;">Homepage</a></span>
-						<span style="padding-left:30px;"><a href="./TermsofService.html" class="link-dark" style="text-decoration: none;">Terms of Service</a></span>
-						<span style="padding-left:30px;"><a href="./PrivacyPolicy.html" class="link-dark" style="text-decoration: none;">Privacy Policy</a></span>
-						<span style="padding-left:30px;"><a href="./SaaSCertification.html" class="link-dark" style="text-decoration: none;">SaaS Certification</a></span>
+						<span style="font-size: 0.8em;"><a href="https://www.rnadatasystem.com" class="link-dark" target="_blank" rel="noopener" style="text-decoration: none;">Homepage</a></span>
+						<span style="padding-left:30px; font-size: 0.8em;"><a href="./TermsofService.html" class="link-dark" style="text-decoration: none;">Terms of Service</a></span>
+						<span style="padding-left:30px; font-size: 0.8em;"><a href="./PrivacyPolicy.html" class="link-dark" style="text-decoration: none;">Privacy Policy</a></span>
+						<span style="padding-left:30px; font-size: 0.8em;"><a href="./SaaSCertification.html" class="link-dark" style="text-decoration: none;">SaaS Certification</a></span>
 			</div>
 			<div class="collapse navbar-collapse" id="navbar-menu">
-						<span style="padding-right:30px;">Copyright © 2024 RNA Data System. All Rights Reserved.</span>
-						<span>v0.3.1 (2024.09.25)</span>
-					</ul>
-				</div>
+						<span style="padding-right:30px; font-size: 0.8em;">Copyright © 2024 RNA Data System. All Rights Reserved.</span>
+						<span style="font-size: 0.8em;">v0.3.1 (2024.09.25)</span>
 			</div>
 		</div>
 	</footer>
