--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="headerFragment">
-	<header class="navbar navbar-expand-md d-none d-lg-flex d-print-none sticky-top" style="background-color:#0054a6">
+	<header class="navbar navbar-expand-md bg-primary d-none d-lg-flex d-print-none sticky-top">
 		<div class="container-xl">
 			<div class="navbar-nav align-items-center flex-row order-md-last">
 				<span style="padding-left:30px;">
@@ -26,7 +26,7 @@
 			<div class="collapse navbar-collapse" id="navbar-menu">
 				<marquee behavior="scroll" class="link-light">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="icon icon-tabler icons-tabler-filled icon-tabler-alert-triangle"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 1.67c.955 0 1.845 .467 2.39 1.247l.105 .16l8.114 13.548a2.914 2.914 0 0 1 -2.307 4.363l-.195 .008h-16.225a2.914 2.914 0 0 1 -2.582 -4.2l.099 -.185l8.11 -13.538a2.914 2.914 0 0 1 2.491 -1.403zm.01 13.33l-.127 .007a1 1 0 0 0 0 1.986l.117 .007l.127 -.007a1 1 0 0 0 0 -1.986l-.117 -.007zm-.01 -7a1 1 0 0 0 -.993 .883l-.007 .117v4l.007 .117a1 1 0 0 0 1.986 0l.007 -.117v-4l-.007 -.117a1 1 0 0 0 -.993 -.883z" /></svg>
-					If there is a notice for all users, please apply it to this area.
+					Please note that this service will be suspended on Saturday, November 23rd from 2:00 am KST to 5:00 am KST for regular maintenance.
 				</marquee>
 			</div>
 		</div>
