--- a/src/main/resources/templates/views/user/newPassword.html
+++ b/src/main/resources/templates/views/user/newPassword.html
@@ -1,117 +1,78 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비밀번호 변경 신청</title>
-    <link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet" />
-    <link href="css/file-css.css" rel="stylesheet" />
-    <link href="css/common-css.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/utils.js"></script>
-    <style>
-        body {
-            background-color: #d0d8e8;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .form-container {
-            background-color: #f0f4fc;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .form-container .form-label {
-            font-size: 14px;
-            margin-bottom: 5px;
-        }
-        .form-container input {
-            width: calc(100% - 10px);
-            padding: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-        .form-container button {
-            padding: 5px 10px;
-            background-color: #4a76a8;
-            color: white;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-            width: 100%;
-        }
-        .form-container button:hover {
-            background-color: #365f85;
-        }
-    </style>
-</head>
-<body>
-
-<div class="form-container">
-    <form id="passwordResetForm" name="passwordResetForm" onsubmit="return false;">
-        <div class="row">
-            <div class="col">
-            	<!-- 새비밀번호 -->
-                <label for="newPassword" class="form-label">New Password</label>
-                <input id="newPassword" name="newPassword" type="password" class="form-control" placeholder="Enter New Password" required>
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col">
-            	<!-- 새비밀번호확인 -->
-                <label for="confirmNewPassword" class="form-label">Confirm New Password</label>
-                <input id="confirmNewPassword" name="confirmNewPassword" type="password" class="form-control" placeholder="Enter Confirm New Password" required>
-            </div>
-        </div>
-        <div class="row mt-3 text-center">
-            <div class="col">
-                <button type="submit" class="btn btn-primary" onclick="submitPasswordChange()">신청</button>
-            </div>
-        </div>
-    </form>
-	<form id="form" name="form" method="post" action="/menuLink">
-		<input type="hidden" id="pageName" name="pageName" />
-	</form>
-</div>
+<!doctype html>
+<html lang="en">
+ 	<head>
+		<meta charset="utf-8"/>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge; chrome=1"/>
+		<title>iFrame 2.0 - Cloud IFRS17 Closing Services</title>
+		<!-- CSS file -->
+		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet"/>
+		<!-- Javascript file -->
+		<script src="js/js-tabler/tabler.min.js?1692870487" defer></script>
+		<script src="js/jquery-3.7.1.min.js"></script>
+		<script src="js/common.js"></script>
+		<script src="js/utils.js"></script>
+		<style>
+			@import url('https://rsms.me/inter/inter.css');
+			:root {
+			--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+			}
+		</style>
+	</head>
+	<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+		<div class="page page-center">
+    		<div class="container container-tight">
+    			<div class="text-center mb-5">
+					<span class="navbar-brand" data-bs-toggle="tooltip" data-bs-placement="top" title="Cloud IFRS17 Closing Services">
+					<span style="font-style: italic; font-size: 2em; font-family: Times New Roman; color: #0054a6;">i</span><span style="font-size: 2em; color: #0054a6;">Frame 2.0</span></span>
+				</div>
+			    <form class="card card-md" id="passwordResetForm" name="passwordResetForm" method="post" autocomplete="off" onsubmit="return false;">
+					<div class="card-body">
+						<h2 class="card-title text-center mb-4">New password</h2>
+						<p class="text-secondary mb-4">The password initialized by your company administrator is no longer valid. Please enter a new password.</p>
+						<div class="form-floating mb-2">
+							<input type="password" class="form-control" id="newPassword" name="newPassword" minLength="8" maxLength="20" placeholder="your password" autocomplete="off" required>
+							<label for="newPassword">your password</label>
+						</div>
+						<div class="form-floating mb-2">
+							<input type="password" class="form-control" id="confirmNewPassword" name="confirmNewPassword" minLength="8" maxLength="20" placeholder="re-enter your password" autocomplete="off" required>
+							<label for="confirmNewPassword">re-enter your password</label>
+						</div>
+						<div class="form-footer">
+							<button type="submit" class="btn btn-primary w-100" onclick="submitPasswordChange()">Submit</button>
+						</div>
+			    </form>
+			</div>
+		</div>
+		<div class="text-center text-secondary mt-3 mb-3">
+			<span style="font-size: 0.7em;">Copyright © 2024 RNA Data System. All Rights Reserved.</span>
+		</div>
+		<form id="form" name="form" method="post" action="/menuLink">
+			<input type="hidden" id="pageName" name="pageName" />
+		</form>
 
 <script>
     function submitPasswordChange() {
         var vNewPassword        = $("#newPassword").val();
         var vConfirmNewPassword = $("#confirmNewPassword").val();
-
     	if ( isNull(vNewPassword) == "" ) {
-            alert("Enter New Password.");
-            $("#countryName").focus();
+            alert("Enter new password.");
+            $("#newPassword").focus();
     		return;
     	}
-
     	if ( isNull(vConfirmNewPassword) == "" ) {
-            alert("Enter Confirm New Password.");
-            $("#countryName").focus();
+            alert("Re-enter new password.");
+            $("#confirmNewPassword").focus();
     		return;
     	}
-    	
         if (vNewPassword !== vConfirmNewPassword) {
             //alert("비밀번호가 일치하지 않습니다. 다시 확인해주세요.");
             alert("The passwords do not match. Please try again.");
-            $("#countryName").focus();
+            $("#confirmNewPassword").focus();
             return;
         }
-
         const requestData = {
         	usrNewPassword: vNewPassword
         };
-
         $.ajax({
             type: "post",
             url: "/auth/adamsLoginPw",
@@ -120,19 +81,16 @@
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify(requestData),
             success: function (data) {
-                //alert("비밀번호 변경 신청이 완료되었습니다.");
-                alert("Your password change application has been completed.");
+                alert("Your password has been changed completely.");
                 $("#pageName").val("login");
                 $("#form").submit();
             },
             error: function (xhr, status, error) {
-                //alert("오류가 발생했습니다. 다시 시도해주세요.");
                 alert("An error occurred. Please try again.");
             }
         });
     }
-
 </script>
 
-</body>
+	</body>
 </html>
