--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -28,7 +28,7 @@
 			    <form class="card card-md" id="resetPasswordForm" name="resetPasswordForm" method="post" action="/auth/adamsFindPw" autocomplete="off" onsubmit="return false;">
 					<div class="card-body">
 						<h2 class="card-title text-center mb-4">Forgot password</h2>
-						<p class="text-secondary mb-4">Enter your information and your company administrator will reset your password and email you.</p>
+						<p class="text-secondary mb-4">Please submit your information. We will reset your password and send you a temporary password by e-mail.</p>
 
 						<div class="form-floating mb-2">
 							<select class="form-select" id="companyDivision" name="companyDivision" autocomplete="off" required>
@@ -78,25 +78,25 @@
     	var vUsrPhNo    = $("#userPhone").val();
     	
     	if ( isNull(vCompNoDvCd) == "" ) {
-            alert("Select Company Number Type.");
+            alert("Select type of your company identification.");
             $("#companyDivision").focus();
     		return;
     	}
     	
     	if ( isNull(vCompNo) == "" ) {
-            alert("Enter Company Number.");
+            alert("Enter your company number.");
             $("#companyNo").focus();
     		return;
     	}
     	
     	if ( isNull(vUsrId) == "" ) {
-            alert("Enter ID.");
+            alert("Enter your e-mail (ID).");
             $("#userId").focus();
     		return;
     	}
     	
     	if ( isNull(vUsrPhNo) == "" ) {
-            alert("Enter Phone Number.");
+            alert("Enter your phone number.");
             $("#userPhone").focus();
     		return;
     	}
@@ -120,7 +120,7 @@
             success: function (data) {
                 
             	//alert("비밀번호 초기화 신청이 완료되었습니다. 이메일로 임시 비밀번호가 전송됩니다.");
-                alert("Your password reset application has been completed. A temporary password will be sent to your email.");
+                alert("Your password has been reset successfully. Please check your e-mail and log in.");
 
 				console.log("AJAX request successful. Data received:", data);
 				
