--- a/src/main/resources/templates/views/user/newPassword.html
+++ b/src/main/resources/templates/views/user/newPassword.html
@@ -28,7 +28,7 @@
 			    <form class="card card-md" id="passwordResetForm" name="passwordResetForm" method="post" autocomplete="off" onsubmit="return false;">
 					<div class="card-body">
 						<h2 class="card-title text-center mb-4">New password</h2>
-						<p class="text-secondary mb-4">The password initialized by your company administrator is no longer valid. Please enter a new password.</p>
+						<p class="text-secondary mb-4">The initialized password is no longer valid. Please enter a new password.</p>
 						<div class="form-floating mb-2">
 							<input type="password" class="form-control" id="newPassword" name="newPassword" minLength="8" maxLength="20" placeholder="your password" autocomplete="off" required>
 							<label for="newPassword">your password</label>
@@ -66,7 +66,7 @@
     	}
         if (vNewPassword !== vConfirmNewPassword) {
             //alert("비밀번호가 일치하지 않습니다. 다시 확인해주세요.");
-            alert("The passwords do not match. Please try again.");
+            alert("The two inputs for new password do not match. Please enter it again.");
             $("#confirmNewPassword").focus();
             return;
         }
@@ -81,7 +81,7 @@
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify(requestData),
             success: function (data) {
-                alert("Your password has been changed completely.");
+                alert("Your password has been changed successfully.");
                 $("#pageName").val("login");
                 $("#form").submit();
             },
