헤더 및 데이터 row 텍스트 정렬

--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -20,7 +20,17 @@ a.nav-link.active {
 }
 .slick-header-columns {
   /* flex-grow: 1 if we want to align sort icons to the right */
-  --alpine-header-name-flex-grow: 1;
+	--alpine-header-name-flex-grow: 1;
+	font-weight: bold;
+	text-align: center;
+}
+
+.slick-column-center {
+	text-align: center;
+}
+
+.slick-column-right {
+	text-align: right;
 }
 
 .slick-cell.copied {
