--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -60,18 +60,9 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
 		<!-- litepicker library for making a datepicker -->
-		<script
-			src="js/libs-tabler/nouislider/dist/nouislider.min.js?1692870487"
-			defer
-		></script>
-		<script
-			src="js/libs-tabler/litepicker/dist/litepicker.js?1692870487"
-			defer
-		></script>
-		<script
-			src="js/libs-tabler/tom-select/dist/js/tom-select.base.min.js?1692870487"
-			defer
-		></script>
+		<script src="js/libs-tabler/nouislider/dist/nouislider.min.js?1692870487" defer></script>
+		<script src="js/libs-tabler/litepicker/dist/litepicker.js?1692870487" defer></script>
+		<script src="js/libs-tabler/tom-select/dist/js/tom-select.base.min.js?1692870487" defer></script>
 
 		<!-- chartjs library for making a charts --> 
 		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
