--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -1,158 +1,71 @@
 <!DOCTYPE html>
-<html
-  lang="en"
-  xmlns:th="http://www.thymeleaf.org"
-  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="~{layout/layout}"
->
-  <th:block layout:fragment="content">
-    <script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
-    <div class="page-wrapper" id="page-wrapper">
-      <div class="container" id="container">
-        <h2>[[${menuNm}]]</h2>
-        <div class="ptag-container">
-          <!-- <span><a href="#"> Home ></a></span> -->
-          <span>[[${navigator}]]</span>
-          <div class="form-container">
-            <div class="form-box">
-              <form
-                id="filter-form"
-                name="form"
-                method="post"
-                action="/WRKFIL001M0SelectList"
-                onsubmit="return false;"
-              >
-                <div class="row">
-                  <div class="col">
-                    <input
-                      id="inpSearchTxt"
-                      name="inpSearchTxt"
-                      type="text"
-                      class="form-input-temp"
-                      placeholder="File Name/Table ID"
-                    />
-                    <button
-                      type="button"
-                      class="btn btn-primary"
-                      style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="main()"
-                    >
-                      Search
-                    </button>
-                  </div>
-                  <div class="col text-end">
-                    <button
-                      form="new-form"
-                      type="button"
-                      class="btn btn-primary"
-                      style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-                      data-test="create-button"
-                      onsubmit="return false;"
-                    >
-                      Create
-                    </button>
-                    <button
-                      type="button"
-                      class="btn btn-lime"
-                      style="padding: 4px 10px; color: white; font-size: 13px"
-                      id="downloadExcel"
-                    >
-                      Download
-                    </button>
-                    <button
-                      form="new-form"
-                      type="button"
-                      class="btn btn-secondary"
-                      style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-                      data-test="edit-button"
-                      onsubmit="return false;"
-                    >
-                      Edit
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-          <div style="padding-top: 2em"></div>
-          <!-- <div id="divMyGrid">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
+<th:block layout:fragment="content">
+	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
+	<div class="page-wrapper" id="page-wrapper">
+		<div class="container" id="container">
+			<h2>[[${menuNm}]]</h2>
+			<div class="ptag-container">
+				<!-- <span><a href="#"> Home ></a></span> -->
+				<span>[[${navigator}]]</span>
+				<div class="form-container">
+					<div class="form-box">
+						<form id="filter-form" name="form" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
+							<div class="row">
+								<div class="col">
+									<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-input-temp" placeholder="File Name/Table ID" />
+									<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
+								</div>
+								<div class="col text-end">
+									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="create-button" onsubmit="return false;">Create</button>
+									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">Download</button>
+									<button form="new-form" type="button" class="btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="edit-button" onsubmit="return false;">Edit</button>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+				<div style="padding-top: 2em"></div>
+				<!-- <div id="divMyGrid">
             <table align="center" class="table"></table>
           </div> -->
-          <div id="divMyGrid">
-            <table
-              align="center"
-              class="table"
-              style="width: 1284px; height: 720px"
-              border="1"
-              cellpadding="1"
-              cellspacing="1"
-            ></table>
-          </div>
-        </div>
-        <div class="popupDataForm">
-          <button
-            type="button"
-            class="btn btn-primary"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-            style="display: none"
-          >
-            Launch modal with form
-          </button>
-          <div
-            class="modal fade"
-            id="exampleModal"
-            tabindex="-1"
-            style="display: none"
-          >
-            <div class="modal-dialog modal-small" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">New report</h5>
-                  <button
-                    type="button"
-                    class="btn-close"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body">
-                  <div class="row">
-                    <!-- Removed repetitive content for clarity -->
-                    <!-- Add necessary modal content here -->
-                  </div>
-                </div>
-                <div class="modal-footer">
-                  <a
-                    href="#"
-                    class="btn btn-link link-secondary"
-                    data-bs-dismiss="modal"
-                    >Cancel</a
-                  >
-                  <!-- <a
+				<div id="divMyGrid">
+					<table align="center" class="table" style="width: 1284px; height: 720px" border="1" cellpadding="1" cellspacing="1"></table>
+				</div>
+			</div>
+			<div class="popupDataForm">
+				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none">Launch modal with form</button>
+				<div class="modal fade" id="exampleModal" tabindex="-1" style="display: none">
+					<div class="modal-dialog modal-small" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">New report</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<div class="row">
+									<!-- Removed repetitive content for clarity -->
+									<!-- Add necessary modal content here -->
+								</div>
+							</div>
+							<div class="modal-footer">
+								<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal">Cancel</a>
+								<!-- <a
                     href="#"
                     class="btn btn-danger"
                     data-bs-dismiss="modal"
                     style="padding: 4px 10px; color: white; font-size: 13px"
                     >Delete</a
                   > -->
-                  <a
-                    href="#"
-                    class="btn btn-primary ms-auto"
-                    data-bs-dismiss="modal"
-                    style="padding: 4px 10px; color: white; font-size: 13px"
-                    >Save changes</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script>
+								<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px">Save changes</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script>
       function checkData(data) {
         return parentCheckData(data, check_cols);
       }
@@ -173,8 +86,8 @@
         parentDeleteFile(todeleteRow, "/WRKFIL001M0DeleteList");
       }
     </script>
-    <script src="js/utils.js"></script>
-    <script>
+	<script src="js/utils.js"></script>
+	<script>
       $(document).ready(function () {
         console.log("Document is ready.");
         //화면 접속시 바로 조회
@@ -229,6 +142,8 @@
           editor: Slick.Editors.Text,
           validator: createValidator,
           width: 10,
+          headerCssClass: "slick-header-columns",
+          cssClass: "slick-column-center"
         },
         {
           id: "fileNm",
@@ -242,6 +157,7 @@
               noWhitespaceValidator,
             ]),
           width: 170,
+          headerCssClass: "slick-header-columns"
         },
         {
           id: "dbId",
@@ -251,6 +167,7 @@
           editor: Slick.Editors.Text,
           validator: createValidator,
           width: 60,
+          headerCssClass: "slick-header-columns"
         },
         {
           id: "tblId",
@@ -264,6 +181,7 @@
               noWhitespaceValidator,
             ]),
           width: 120,
+          headerCssClass: "slick-header-columns"
         },
         {
           id: "fileDsc",
@@ -273,6 +191,7 @@
           editor: Slick.Editors.Text,
           validator: createValidator,
           width: 120,
+          headerCssClass: "slick-header-columns"
         },
         {
           id: "fileDelYn",
@@ -286,6 +205,8 @@
             ]);
           },
           width: 60,
+          headerCssClass: "slick-header-columns",
+          cssClass: "slick-column-center"
         },
         {
           id: "uiSelYn",
@@ -299,6 +220,8 @@
             ]);
           },
           width: 60,
+          headerCssClass: "slick-header-columns",
+          cssClass: "slick-column-center"
         },
         {
           id: "useYn",
@@ -312,6 +235,8 @@
             ]);
           },
           width: 50,
+          headerCssClass: "slick-header-columns",
+          cssClass: "slick-column-center"
         },
         {
           id: "vrfUseYn",
@@ -325,6 +250,8 @@
             ]);
           },
           width: 70,
+          headerCssClass: "slick-header-columns",
+          cssClass: "slick-column-center"
         },
         {
           id: "frstRegEmpNo",
@@ -333,6 +260,8 @@
           sortable: true,
           editor: Slick.Editors.Text,
           width: 60,
+          headerCssClass: "slick-header-columns",
+          cssClass: "slick-column-center"
         },
         {
           id: "frstRegDtm",
@@ -341,6 +270,8 @@
           sortable: true,
           editor: Slick.Editors.Text,
           width: 80,
+          headerCssClass: "slick-header-columns",
+          cssClass: "slick-column-center"
         },
       ];
 
@@ -813,5 +744,5 @@
         */
       }
     </script>
-  </th:block>
+</th:block>
 </html>
