실행버튼 및 기능 추가

--- a/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
+++ b/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
@@ -42,17 +42,17 @@
                     </button>
                   </div>
                   <div class="col text-end">
-                    <!-- <button
+                    <button
                       form="new-form"
                       type="button"
                       class="btn btn-primary"
                       style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
+                      onclick="reconcile()"
                       data-test="create-button"
                       onsubmit="return false;"
                     >
-                      Create
-                    </button> -->
+                      Reconcile
+                    </button>
                     <button
                       type="button"
                       class="btn btn-lime"
@@ -311,6 +311,25 @@
             grid.setActiveCell(0, 0);
             console.log("SlickGrid initialized.");
         };
+        
+        function reconcile(){
+            addSlickGridSomeStyling();
+            $.ajax({
+                  type: "post",
+                  url: '/BIZADT001M0ExecuteList',
+                  async: true,
+                  dataType: "text", //서버에서 어떤 타입을 받을 것인가
+                  contentType: "application/json; charset=utf-8", //서버로 어떤 타입을 보낼 것인가
+                  data: JSON.stringify(),
+                  success: function (response) {
+                    alert("Successfully Updated");
+                    console.log("reconcile 테스트js");
+                  },
+                  error: function (error) {
+                    console.error("Error updating data:", error);
+                  },
+                });
+        }
         
         // Download Excel functionality
         document.getElementById('downloadExcel').addEventListener('click', function() {
