--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -11,7 +11,7 @@
 							<form id="divSearch" name="divSearch" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
 								<div class="row">
 									<div class="col">
-										<label for="fileDropdown" class="form-label"> Year / Month:</label>
+										<label for="fileDropdown" class="form-label"> Standard Year / Month :</label>
 										<!-- <input id="inpStdYymm" name="inpStdYymm" required="required" type="text" /> -->
 										<input id="inpStdYymm" name="inpStdYymm" type="text" class="form-control" required="required" style="padding: 3px" />
 									</div>
