--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -50,7 +50,7 @@
 									</div>
 								</div>
 								<div class="col">
-									<label class="form-label">Year/Month: </label>
+									<label class="form-label">Standard Year / Month : </label>
 									<div class="input-icon mb-2">
 										<input type="month" class="form-control " placeholder="Select a date" id="datepicker-icon" value="2020-06-20" style="padding: 3px" /> <span class="input-icon-addon"> <!-- Download SVG icon from http://tabler-icons.io/i/calendar --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                           <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -131,7 +131,7 @@
 				<div style="padding-top: 2em">
 					<form name="divData">
 						<p>
-							►&nbsp;<label for="lblGrdTitle">Grid Content</label>
+							►&nbsp;<label for="lblGrdTitle"> </label>
 						</p>
 						<div align="center" >
 							<table id="divGrdMain" style="width: 1284px; height: 720px" border="1" cellpadding="1" cellspacing="1"></table>
