--- a/src/main/resources/templates/views/biz/fst/BIZFST001M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST001M0.html
@@ -46,11 +46,11 @@
                       type="button"
                       class="btn btn-primary"
                       style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
+                      onclick="getSettle()"
                       data-test="create-button"
                       onsubmit="return false;"
                     >
-                      Create
+                      Settlement
                     </button>
                     <button
                       type="button"
@@ -59,17 +59,6 @@
                       id="downloadExcel"
                     >
                       Download
-                    </button>
-                    <button
-                      form="new-form"
-                      type="button"
-                      class="btn btn-secondary"
-                      style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-                      data-test="edit-button"
-                      onsubmit="return false;"
-                    >
-                      Edit
                     </button>
                   </div>
                 </div>
@@ -135,16 +124,53 @@
         </div>
       </div>
     </div>
+    <script src="js/utils.js"></script>
       <script>
         function checkData(data) {
           return parentCheckData(data, check_cols);
         }
 
-        function getFile(input) {
-          return parentGetFile(input, "/BIZFST001M0SelectList");
+        function getList(input) {
+            console.log("getList input : " + input);
+            var option = {
+                           id          : "SelectList"
+                         , type        : "post"
+                         , url         : "/BIZFST001M0SelectList"
+                         , async       : false
+                         , dataType    : "json"
+                         , contentType : "application/json; charset=utf-8"
+                         , data        : input
+                         };
+            
+            gf_Transaction(option, fn_callback);
         }
+        
+        // settle 함수에 보낼 데이터를 가져오는 함수
+        function getSettle(){
+        	addSlickGridSomeStyling();
+        	var input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() });
+            //console.log("getSettle input : " + input);
+        
+            settle(input);
+        }
+        
+        function settle(input) {
+        	
+            //console.log("settle input : " + input);
+            var option = {
+                           id          : "ExecuteList"
+                         , type        : "post"
+                         , url         : "/BIZFST001M0ExecuteList"
+                         , async       : false
+                         , dataType    : "text"
+                         , contentType : "application/json; charset=utf-8"
+                         , data        : input
+                         };
+            
+            gf_Transaction(option, fn_callback);
+        }
+
       </script>
-      <script src="js/utils.js"></script>
       <script>
         $(document).ready(function () {
           console.log("Document is ready.");
@@ -267,35 +293,83 @@
             }
           },
         };
+        
+	        function addSlickGridSomeStyling() {
+	            const style = document.createElement("style");
+	            style.innerHTML = `
+	                .slick-header-columns {
+	                    font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+	                    font-size: 13px;
+	                }
+	                .slick-cell {
+	                    font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+	                    font-size: 13px;
+	                }
+	                `;
+	            document.head.appendChild(style);
+	        };
+	        
+	        function main() {
+				addSlickGridSomeStyling();
+				// 그리드 초기화 및 데이터 로드
+				console.log("Initializing SlickGrid...");
+				getList(
+							(input = JSON.stringify({ 
+								                      searchTxt: $("#inpSearchTxt").val()
+					        }))
+					   );
+			}
+	        
+	        /**
+             * Transaction callback 함수
+            **/
+            function fn_callback(result){
+                console.log("fn_callback : " + result.id);
+                if( result.resultCd == "S" ){
+                    
+                    switch (result.id){
+	                    case "SelectList" :
+	                        
+	                        fn_setGrid(result.data);
+	                        
+	                    break;
+	                    case "ExecuteList" :
+	                        console.log("executeList case");
+	                    	main();
+	                    break;
+                    }
+                    
+                } else if( result.resultCd == "E") {
+                    
+                } else {
+                    console.log("fn_callback result : ", result);
+                }
+            }
 
-        function main() {
-          // 그리드 초기화 및 데이터 로드
-          console.log("Initializing SlickGrid...");
-          data = getFile(
-            (input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() }))
-          );
-
-          dataView = new Slick.Data.DataView();
-          grid = new Slick.Grid("#divMyGrid", dataView, columns, options);
-
-          // Make the grid respond to DataView change events.
-          dataView.onRowCountChanged.subscribe(function (e, args) {
-            grid.updateRowCount();
-            grid.render();
-          });
-
-          dataView.onRowsChanged.subscribe(function (e, args) {
-            grid.invalidate();
-            grid.render();
-          });
-
-          // setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
-          dataView.setItems(data, unqId);
-
-          // when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
-          grid.onBeforeSort.subscribe(function (e, args) {
-            return true;
-          });
+			function fn_setGrid(data){
+				
+				dataView = new Slick.Data.DataView( { idField: unqId });
+				grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
+				
+				// Make the grid respond to DataView change events.
+				dataView.onRowCountChanged.subscribe(function (e, args) {
+					grid.updateRowCount();
+					grid.render();
+				});
+				
+				dataView.onRowsChanged.subscribe(function (e, args) {
+					grid.invalidate();
+					grid.render();
+			});
+	                    
+			// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
+			dataView.setItems(data, unqId);
+			
+			// when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
+			grid.onBeforeSort.subscribe(function (e, args) {
+			    return true;
+			});		              
+          
 
           // 정렬
           grid.onSort.subscribe(function (e, args) {
@@ -303,11 +377,11 @@
 
             data.sort(function (dataRow1, dataRow2) {
               for (var i = 0, l = cols.length; i < l; i++) {
-                var field = cols[i].sortCol.field;
-                var sign = cols[i].sortAsc ? 1 : -1;
-                var value1 = dataRow1[field],
-                  value2 = dataRow2[field];
-                var result =
+                  var field  = cols[i].sortCol.field;
+                  var sign   = cols[i].sortAsc ? 1 : -1;
+                  var value1 = dataRow1[field],
+                      value2 = dataRow2[field];
+                  var result =
                   (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
                 if (result != 0) {
                   return result;
@@ -340,13 +414,13 @@
             console.log("onBeforeEditCell");
           });
 
-          grid.onCellChange.subscribe(function (e, args) {
-            dataView.beginUpdate();
-            dataView.setItems(data);
-            dataView.endUpdate();
-            grid.updateRowCount();
-            grid.render();
-          });
+			grid.onCellChange.subscribe(function (e, args) {
+				dataView.beginUpdate();
+				dataView.setItems(data);
+				dataView.endUpdate();
+				grid.updateRowCount();
+				grid.render();
+			});
 
           grid.onValidationError.subscribe(function (e, args) {
             // handle validation errors originating from the CompositeEditor
@@ -375,12 +449,10 @@
         }
 
         // Download Excel functionality
-        document
-          .getElementById("downloadExcel")
-          .addEventListener("click", function () {
+        document.getElementById("downloadExcel").addEventListener("click", function () {
             const currDate = getCurrentDateTime();
-            const fileName = "BIZJNL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
-            const sheetName = "계정과목관리"; // 시트 이름
+            const fileName = "BIZFST001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
+            const sheetName = "재무제표(BS)"; // 시트 이름
             const gridColumns = columns; // SlickGrid의 컬럼 배열
             const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
             exportToExcel(fileName, sheetName, gridColumns, gridData);
