그리드 세로스크롤 옵션 추가

--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -54,6 +54,7 @@ a.nav-link.active {
   /* width: 1300px; */
   height: 550px;
   width: 100%;
+  overflow-y: scroll;
 }
 /* input::file-selector-button {
   font-weight: 500;
